--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,39 @@
-# Compiled class file
+# -----------------------------------
+# Java build outputs
+# -----------------------------------
 *.class
 
-# Log file
+# -----------------------------------
+# Build directories
+# -----------------------------------
+/bin/
+/build/
+/out/
+
+# -----------------------------------
+# IDE configuration files
+# IntelliJ IDEA, VSCode, Eclipse, etc.
+/.idea/
+/*.iml
+/.classpath
+/.project
+/.settings/
+/.vscode/
+
+# -----------------------------------
+# Operating system files
+# -----------------------------------
+.DS_Store
+Thumbs.db
+
+# -----------------------------------
+# Log and temporary files
+# -----------------------------------
 *.log
+*.tmp
 
-# BlueJ files
-*.ctxt
+# -----------------------------------
+# Project archives or backups
+# -----------------------------------
+/archive/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
